infrastructure/stack.yml
Description: 
    This template creates a VPC, with 2 public subnets (in two different availability zones),
    an EKS cluster and node group, and 2 bastion hosts (one in each subnet)

Parameters:
    EnvironmentName: 
        Description: The environment name used as the prefix on all resources
        Type: String

    KeyPairName: 
        Description: Name of an existing public/private key pair used to connect to the EKS cluster
        Type: AWS::EC2::KeyPair::KeyName
    
    VPCCIDR:
        Default: 10.1.0.0/16
        Description: The CIDR block for the VPC
        Type: String
        
    PublicSubnet1CIDR:
        Default: 10.1.1.0/24
        Description: CIDR block for the public (DMZ) subnet 1 located in Availability
            Zone 1
        Type: String

    PublicSubnet2CIDR:
        Default: 10.1.2.0/24
        Description: The CIDR block for the public (DMZ) subnet 2 located in Availability
            Zone 2            
        Type: String

    NodeImageId: 
        Description: AMI for the EKS cluster nodes
        Type: String        

    NodeImageType:
        Description: ImageType for the EKS cluster nodes
        Type: String        
    
    BastionHostImageId: 
        Description: AMI for the Bastion hosts
        Type: String

    EKSClusterRole: 
        Description: EKS cluster role
        Type: String
        Default: arn:aws:iam::837674287202:role/eksClusterRole
    
Resources: 
    VPC:
        Type: AWS::EC2::VPC
        Properties: 
            CidrBlock: !Ref VPCCIDR
            EnableDnsHostnames: true
            Tags: 
                - Key: Name
                  Value: !Ref EnvironmentName

    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
            - Key: Name
              Value: !Ref EnvironmentName

    InternetGatewayAttachment: 
        Type: AWS::EC2::VPCGatewayAttachment
        Properties: 
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC

    PublicSubnet1: 
        Type: AWS::EC2::Subnet
        Properties: 
            AvailabilityZone: !Select [0, !GetAZs '' ]
            CidrBlock: !Ref PublicSubnet1CIDR
            MapPublicIpOnLaunch: true
            Tags: 
            - Key: Name
              Value: !Sub ${EnvironmentName} Public Subnet 1
            VpcId: !Ref VPC
    
    PublicSubnet2: 
        Type: AWS::EC2::Subnet
        Properties: 
            AvailabilityZone: !Select [1, !GetAZs '' ]
            CidrBlock: !Ref PublicSubnet2CIDR
            MapPublicIpOnLaunch: true
            Tags: 
            - Key: Name
              Value: !Sub ${EnvironmentName} Public Subnet 2
            VpcId: !Ref VPC

    PublicRouteTable: 
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
            - Key: Name
              Value: !Sub ${EnvironmentName} Public Routes
        
    DefaultPublicRoute: 
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties: 
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway
    
    PublicSubnet1RouteTableAssociation: 
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties: 
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet1
    
    PublicSubnet2RouteTableAssociation: 
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties: 
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet2
                
    BastionRole:
        Type: AWS::IAM::Role
        Properties:
            AssumeRolePolicyDocument:
                Version: '2012-10-17'
                Statement:
                    - Effect: Allow
                      Principal:
                        Service:
                            - ec2.amazonaws.com
                      Action:
                        - sts:AssumeRole
            Path: '/'

    BastionPolicy:
        Type: AWS::IAM::Policy
        Properties:
            PolicyName: BastionPolicy
            PolicyDocument:
                Version: '2012-10-17'
                Statement:
                    - Effect: Allow
                      Action: 's3:*'
                      Resource: '*'
            Roles:
            - !Ref BastionRole
    
    BastionInstanceProfile:
        Type: AWS::IAM::InstanceProfile
        Properties:
            Path: '/'
            Roles:
            - !Ref BastionRole
    
    BastionSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: Security group for bastion hosts
            VpcId: !Ref VPC
            SecurityGroupEgress:
            - IpProtocol: tcp
              FromPort: 0
              ToPort: 65535
              CidrIp: 0.0.0.0/0
            SecurityGroupIngress:
            - IpProtocol: tcp
              FromPort: '22'
              ToPort: '22'
              CidrIp: 0.0.0.0/0
                
    BastionHost1:
        Type: AWS::EC2::Instance
        DependsOn:
            - BastionSecurityGroup
            - BastionInstanceProfile
        Properties:
            UserData:
                Fn::Base64: !Sub |
                    #!/bin/bash
                    apt-get update -y
                    apt-get install unzip awscli -y
                    apt-get install kubectl -Y
            IamInstanceProfile: !Ref BastionInstanceProfile
            SecurityGroupIds:
            - Ref: BastionSecurityGroup
            SubnetId: !Ref PublicSubnet1
            ImageId: !Ref BastionHostImageId
            InstanceType: t3.small
            KeyName: !Sub ${KeyPairName}
    
    BastionHost1EIP:
        Type: AWS::EC2::EIP
        Properties:
            Domain: vpc
    
    EIPAssociation1:
        Type: AWS::EC2::EIPAssociation
        DependsOn:
            - BastionHost1
            - BastionHost1EIP
        Properties:
            InstanceId:
                Ref: BastionHost1
            AllocationId:
                Fn::GetAtt:
                    - BastionHost1EIP
                    - AllocationId
                            
    BastionHost2:
        Type: AWS::EC2::Instance
        DependsOn:
            - BastionSecurityGroup
            - BastionInstanceProfile
        Properties:
            UserData:
                Fn::Base64: !Sub |
                    #!/bin/bash
                    apt-get update -y
                    apt-get install unzip awscli -y
                    apt-get install kubectl -Y
            IamInstanceProfile: !Ref BastionInstanceProfile
            SecurityGroupIds:
                - Ref: BastionSecurityGroup
            SubnetId: !Ref PublicSubnet2
            ImageId: !Ref BastionHostImageId
            InstanceType: t3.small
            KeyName: !Sub ${KeyPairName}
    
    BastionHost2EIP:
        Type: AWS::EC2::EIP
        Properties:
            Domain: vpc
    
    EIPAssociation2:
        Type: AWS::EC2::EIPAssociation
        DependsOn:
            - BastionHost2
            - BastionHost2EIP
        Properties:
            InstanceId:
                Ref: BastionHost2
            AllocationId:
                Fn::GetAtt:
                    - BastionHost2EIP
                    - AllocationId

    EKSClusterSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: Security group for EKS cluster
            VpcId: !Ref VPC

    EKSSecurityGroupIngress:
        Type: AWS::EC2::SecurityGroupIngress
        Properties:
            GroupId: !Ref EKSClusterSecurityGroup
            IpProtocol: tcp
            FromPort: 0
            ToPort: 65535
            SourceSecurityGroupId: !Ref EKSClusterSecurityGroup            

    EKSCluster:
        Type: "AWS::EKS::Cluster"
        Properties:
            Name: !Join [ "", [ !Ref EnvironmentName, "-EKSCluster" ] ]
            ResourcesVpcConfig:
                SecurityGroupIds:
                    - !Ref EKSClusterSecurityGroup
                SubnetIds:
                    - !Ref PublicSubnet1
                    - !Ref PublicSubnet2
            RoleArn: !Ref EKSClusterRole
    
    NodeInstanceRole:
        Type: AWS::IAM::Role
        Properties:
            AssumeRolePolicyDocument:
                Version: '2012-10-17'
                Statement:
                - Effect: Allow
                  Principal:
                    Service:
                    - ec2.amazonaws.com
                  Action:
                  - sts:AssumeRole
            Path: "/"
            ManagedPolicyArns:
            - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
            - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
            - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
    
    EKSNodeGroup:
        Type: AWS::EKS::Nodegroup
        DependsOn: 
            - NodeInstanceRole
            - EKSCluster
        Properties:
            ClusterName: !Ref EKSCluster
            NodeRole: !GetAtt NodeInstanceRole.Arn
            ScalingConfig:
                MinSize: 1
                DesiredSize: 1
                MaxSize: 3
            Subnets:
                - !Ref PublicSubnet1
                - !Ref PublicSubnet2

Outputs:

    VPC:
        Description: A reference to the created VPC
        Value: !Ref VPC
        Export:
            Name: !Sub ${EnvironmentName}-VPCID
    
    
    PublicSubnet1:
        Description: A reference to public subnet 1
        Value: !Ref PublicSubnet1
        Export:
            Name: !Sub ${EnvironmentName}-PublicSubnet1
    
    PublicSubnet2:
        Description: A reference to public subnet 2
        Value: !Ref PublicSubnet2
        Export:
            Name: !Sub ${EnvironmentName}-PublicSubnet2

    PublicSubnets:
        Description: A list of the public subnets
        Value: !Join [ ",", [ !Ref PublicSubnet2, !Ref PublicSubnet2 ]]
        Export:
            Name: !Sub ${EnvironmentName}-PublicSubnets

    BastionHost1IP:
        Description: 'BastionHost1Ip'
        Value: !Sub 'http://${BastionHost1.PublicIp}'
        Export:
            Name: BastionHost1Ip

    BastionHost2IP:
        Description: 'BastionHost2IP'
        Value: !Sub 'http://${BastionHost2.PublicIp}'
        Export:
            Name: BastionHost2IP
